<resources>
    <string name="app_name">AGSR</string>
    <string name="home_label">Home</string>
    <string name="history_label">History</string>
    <string name="profile_page">Profile</string>
    <string name="fab_description">Add Goal</string>
    <string name="steps">Steps</string>
    <string name="goal_name_hint">Goal Name</string>
    <string name="done">Done</string>
    <string name="discard">Discard</string>
    <string name="enter_steps">Enter Steps</string>
    <string name="add">Add</string>
</resources>