<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".ui.addeditgoal.AddEditGoalDialogeFragment"
    android:padding="8dp">

    <TextView
        android:id="@+id/add_edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:gravity="center_horizontal"

        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/goal_name_textField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/goal_name_hint"
        android:layout_marginTop="16dp"
        app:errorEnabled="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/add_edit_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/goal_name_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/goal_steps_textField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/steps"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        app:errorEnabled="true"
        android:layout_below="@id/goal_name_textField"
        android:layout_centerHorizontal="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/goal_steps_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:layout_below="@id/goal_steps_textField"
        android:layout_alignParentEnd="true"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/discard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discard"
        android:layout_below="@id/goal_steps_textField"
        android:layout_toStartOf="@id/done"
        android:layout_marginEnd="8dp"
    />
</RelativeLayout>