<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.history.historyEdit.HistoryEditFragment"
    android:padding="8dp">

    <TextView
        android:id="@+id/history_edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Edit History"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp"/>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/history_edit_step_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_steps"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        app:errorEnabled="true"
        android:layout_below="@id/history_edit_title">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/history_edit_step_input_layout_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:imeOptions="actionDone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/history_edit_dropDown_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/history_edit_step_input_layout"
        android:layout_marginHorizontal="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

        <AutoCompleteTextView
            android:id="@+id/history_edit_dropDown_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/history_edit_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:layout_below="@id/history_edit_dropDown_layout"
        android:layout_alignParentEnd="true"
        android:layout_margin="8dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/history_edit_discard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discard"
        android:layout_below="@id/history_edit_dropDown_layout"
        android:layout_toStartOf="@id/history_edit_done"
        android:layout_margin="8dp"/>



</RelativeLayout>